GNOME Bugzilla – Bug 693586
Erroneous focus claims resulting from gtk_notebook_set_current_page()
Last modified: 2013-10-06 15:50:30 UTC
Created attachment 235696 [details] test case Steps to reproduce: 1. Launch the attached test case. 2. Press Space to activate the '+' button. Expected results: The accessible page tab associated with the GtkNotebook would not make any claim of having focus because the GtkButton has focus. Actual results: Each time the '+' button is activated, the accessible page tab associated with the GtkNotebook claims focus.
Created attachment 235863 [details] [review] a11y: Drop obsolete focus tab handling in notebooks GtkNotebook lost the concept of a separate 'focus tab' ages ago. Time for the accessible implementation to follow suit.
Can you check if this patch helps ? I'm having some trouble running your python test against my jhbuild gtk, so it would be good to have you confirm that a) this fixes the focus issue and b) it doesn't break notebook a11y otherwise.
Attachment 235863 [details] pushed as 605b918 - a11y: Drop obsolete focus tab handling in notebooks
Matthias, I'm really sorry I'd spaced this one out. I suppose you knew that seeing it committed would remind me. ;) Having said that, I just tried Gtk+ master and am still seeing the focus claims reported in the opening report using the associated test case. I'm guessing I'm doing something silly, but I'm not sure what. When I run the Application class demo, the About dialog says "3.11.0, Running against GTK+ 3.11.0." So as a quick sanity check, could you please confirm that you are not seeing the page-tab focus claims from the test case I provided.